--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <!-- hello -->
     <div class="calculator">
         <div class="output">
             <div id="result">0</div>
